containers/forecast_service/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-volume
spec:
  restartPolicy: Never
  volumes:
  - name: data-volume
    persistentVolumeClaim:
      claimName: data-pvc
  containers:
  - name: debug
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: /data
      name: data-volume
