containers/forecast_service/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  labels:
    app: load-generator
spec:
  containers:
  - name: hey
    image: demisto/rakyll-hey:1.0.0.108484
    imagePullPolicy: Never   # Use the locally loaded image
    command: ["/bin/sh"]
    args:
    - -c
    - |
      while true; do
        hey -n 5000 -c 100 http://forecast-service/predict
        echo "Load burst complete, pausing 10s..."
        sleep 10
      done
