containers/forecast_service/forecast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecast-service
spec:
  selector:
    app: forecast
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000  # Container port
  type: NodePort  # Accessible via minikube ip:nodePort
